@@ -62,5 +62,5 @@ x86_64).
 License Terms and Conditions
 ----------------------------
 
-See /usr/share/doc/fglrx/ATI_LICENSE.TXT.
+See /usr/share/doc/fglrx/LICENSE.TXT.
 
