@@ -1,3 +1,10 @@
+Thu Jun 30 02:35:23 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
+-------------------------------------------------------------------
+
+- add new KMS Configuration for further openSUSE versions (e.g., 12.1)
+- rename from ATI to AMD in some scripts
+- add symlink /usr/bin/amdconfig to /usr/bin/aticonfig
+
 -------------------------------------------------------------------
 Fri Jun 17 22:17:03 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
 
